modif fichier index.html et styles.css

--- a/index.html
+++ b/index.html
@@ -1,206 +1,149 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-
-  <!-- CSS -->
+  <title>youc2</title>
   <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
-    <!-- Header -->
-    <header>
+  <!-- header -->
+  <header>
       <nav>
-        <div class="logo">
-          <img src="./public/img/logo-horizontal-fond-noir-couleur.png" alt="">
-        </div>
-        <ul>
-          <!-- Li qui comporte un btn a cliquable avec dedans img + span -->
-          <li>
-            <a href="">
-              <img src="./public/img/home-icon.png" alt="home">
-              <span>home</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="">
-              <img src="./public/img/packages-icon.png" alt="packages">
-              <span>packages</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="">
-              <img src="./public/img/outils-icon.png" alt="outils">
-              <span>outils</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="">
-              <img src="./public/img/projets-icon.png" alt="projets">
-              <span>projets</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="">
-              <img src="./public/img/temoignages-icon.png" alt="temoignages">
-              <span>temoignages</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="">
-              <img src="./public/img/contact-icon.png" alt="contact">
-              <span>contact</span>
-            </a>
-          </li>
-
-        </ul>
+          <div class="logo"><img src="./public/img/logo-horizontal-fond-noir-couleur.png" alt="logo"></div>
+          <ul>
+              <li><a href=""><img src="./public/img/home-icon.png" alt=""><span>home</span></a></li>
+              <li><a href=""><img src="./public/img/packages-icon.png" alt=""><span>packages</span></a></li>
+              <li><a href=""><img src="./public/img/outils-icon.png" alt=""><span>outils</span></a></li>
+              <li><a href=""><img src="./public/img/projets-icon.png" alt=""><span>projets</span></a></li>
+              <li><a href=""><img src="./public/img/temoignages-icon.png" alt=""><span>temoignages</span></a></li>
+              <li><a href=""><img src="./public/img/contact-icon.png" alt=""><span>contact</span></a></li>
+          </ul>
       </nav>
-      
-      <div class="pack">
-        <div>
-          <img src="./public/img/packages.png" alt="packagesHeader">
-        </div>
+      <!-- Banner -->
+      <div>
+          <img src="./public/img/banner-home.png" alt="Banner">
+      </div>
+  </header>
 
-        <h1>à chaque étape son pack <br> <span> naître, grandir et prospérer</span></h1>
+  <!-- Section intro -->
+  <section class="intro">
+      <div>
+          <img src="./public/img/logo-about.png" alt="logo-about">
       </div>
-    </header>
-  
-    <!-- Section eclosion -->
-    <section class="eclosion">
-      <h1>Éclosion</h1>
-      <div class="section-1-contenu">
-          <div class="image">
-            <img src="./public/img/icon-eclosion.png" alt="icon-ecolsion">
-          </div>
-          <div class="contenu">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, cum!</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus molestias aliquam aliquid possimus, officiis eos quam labore quas ut, commodi, nesciunt repudiandae veniam numquam provident?</p>
-          </div>
+      <div>
+          <h2>Une communication évolutive basée sur l'avancement de votre projet</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sequi possimus eius ipsum
+              officiis veniam exercitationem rem saepe eos velit.</p>
+          <p>Blanditiis, earum a reiciendis debitis vitae vel expedita explicabo ducimus? Ullam assumenda quaerat
+              perspiciatis nostrum tempore quis sit enim minima!</p>
+          <p>Aspernatur, dolore cumque natus facere fugit repudiandae doloribus, exercitationem dicta ea sequi
+              quasi rerum, possimus accusamus ipsa incidunt nesciunt officia.</p>
+          <p>Fugiat alias nam deserunt aliquam dicta ducimus suscipit labore dolores vero, qui repellat, et iusto
+              similique animi harum maiores natus!</p>
       </div>
-      <div class="beige">
-        <div class="contenu">
-          <img src="./public/img/Logo-logo.png" alt="logo-logo">
-          <span>logo</span>
-        </div>
-        <div class="contenu">
-          <img src="./public/img/icon-charte-graphic.png" alt="icon-graphic">
-          <span>charte</span>
-        </div>
-        <div class="contenu">
-          <img src="./public/img/site-single-page.png" alt="site single">
-          <span>site single</span>
-        </div>
-        <div class="contenu">
-          <img src="./public/img/carte-visite.png" alt="">
-          <span>carte de visite</span>
-        </div>
-      </div>
-    </section>
-    
-    <!-- Section Eclosion -->
-    <section class="eclosion">
-      <h1>Evolution</h1>
-      <div class="section-1-contenu">
-          <div class="image">
-            <img src="./public/img/icon-eclosion.png" alt="icon-ecolsion">
-          </div>
-          <div class="contenu">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, cum!</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus molestias aliquam aliquid possimus, officiis eos quam labore quas ut, commodi, nesciunt repudiandae veniam numquam provident?</p>
-          </div>
-      </div>
-      <div class="beige">
-        <div class="contenu">
-          <img src="./public/img/Logo-logo.png" alt="logo-logo">
-          <span>logo</span>
-        </div>
-        <div class="contenu">
-          <img src="./public/img/icon-charte-graphic.png" alt="icon-graphic">
-          <span>charte</span>
-        </div>
-        <div class="contenu">
-          <img src="./public/img/site-single-page.png" alt="site single">
-          <span>site single</span>
-        </div>
-        <div class="contenu">
-          <img src="./public/img/carte-visite.png" alt="">
-          <span>carte de visite</span>
-        </div>
-        <div class="contenu">
-          <img src="./public/img/carte-visite.png" alt="">
-          <span>à la ligne</span>
-        </div>
-      </div>
-    </section>
+  </section>
 
-    <!-- Section Envol -->
-    <section class="eclosion">
-      <h1>Envol</h1>
-      <div class="section-1-contenu">
-          <div class="image">
-            <img src="./public/img/icon-eclosion.png" alt="icon-ecolsion">
+  <!-- Pack -->
+  <section class="sc">
+      <div class="row">
+          <div class="imgTitre">
+              <img src="./public/img/packages.png" alt="packages">
           </div>
-          <div class="contenu">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, cum!</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus molestias aliquam aliquid possimus, officiis eos quam labore quas ut, commodi, nesciunt repudiandae veniam numquam provident?</p>
+          <div class="zoneTexte">
+              <h1>A chaque étape son pack <br> <span>naître, grandir et propérer</span></h1>
           </div>
       </div>
-      <div class="beige">
-        <div class="contenu">
-          <img src="./public/img/Logo-logo.png" alt="logo-logo">
-          <span>logo</span>
-        </div>
-        <div class="contenu">
-          <img src="./public/img/icon-charte-graphic.png" alt="icon-graphic">
-          <span>charte</span>
-        </div>
-        <div class="contenu">
-          <img src="./public/img/site-single-page.png" alt="site single">
-          <span>site single</span>
-        </div>
-        <div class="contenu">
-          <img src="./public/img/carte-visite.png" alt="">
-          <span>carte de visite</span>
-        </div>
-
+      <div class="choix">
+          <div>
+              <h1>Eclosion</h1>
+              <img src="./public/img/icon-eclosion.png" alt="Eclosion">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia harum atque!
+                  Rem officia </p>
+              <button>ça m'intéresse</button>
+          </div>
+          <div>
+              <h1>Evolution</h1>
+              <img src="./public/img/icon-evolution.png" alt="Evolution">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia harum atque!
+                  Rem officia </p>
+              <button>ça m'intéresse</button>
+          </div>
+          <div>
+              <h1>Envol</h1>
+              <img src="./public/img/icon-envole.png" alt="Envol">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia harum atque!
+                  Rem officia
+              </p>
+              <button>ça m'intéresse</button>
+          </div>
       </div>
-    </section>
+  </section>
 
-    <!-- Footer -->
-    <footer>
+  <!-- Outils -->
+  <section class="sc">
+      <div class="row">
+          <div class="imgTitre">
+              <img src="./public/img/outils.png" alt="outils">
+          </div>
+          <div class="zoneTexte">
+              <h1>Des outils pour une communication complète</h1>
+          </div>
+      </div>
+      <div class="choix">
+          <div class="">
+              <h2>Identité visuelle</h2>
+              <img class="resize" src="./public/img/identite-graphique.png" alt="identite-graphique">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia harum atque!
+                  Rem officia
+                  autem ipsam sed, doloremque ipsum nostrum vel quae labore consequuntur vitae.</p>
+              <button>ça m'intéresse</button>
+          </div>
+          <div>
+              <h2>Web</h2>
+              <img class="resize" src="./public/img/reseaux-sociaux.png" alt="reseaux-sociaux">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia harum atque!
+                  Rem officia
+                  autem ipsam sed, doloremque ipsum nostrum vel quae labore consequuntur vitae.</p>
+              <button>ça m'intéresse</button>
+          </div>
+          <div>
+              <h2>Print</h2>
+              <img class="resize" src="./public/img/print.png" alt="print">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia harum atque!
+                  Rem officia
+                  autem ipsam sed, doloremque ipsum nostrum vel quae labore consequuntur vitae.</p>
+              <button>ça m'intéresse</button>
+          </div>
+      </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
       <div class="contenu">
-        <h3>Packs</h3>
-        <div class="icones">
-          <img src="./public/img/icon-eclosion.png" alt="icon-eclosion">
-          <img src="./public/img/icon-evolution.png" alt="icon-eclosion">
-          <img src="./public/img/icon-envole.png" alt="icon-eclosion">
-        </div>
+          <h3>Packs</h3>
+          <div class="icones">
+              <img src="./public/img/icon-eclosion.png" alt="icon-eclosion">
+              <img src="./public/img/icon-evolution.png" alt="icon-evolution">
+              <img src="./public/img/icon-envole.png" alt="icon-envole">
+          </div>
       </div>
       <div class="contenu">
-        <h3>Packs</h3>
-        <div class="icones">
-          <img src="./public/img/icon-charte-graphic.png" alt="icon-eclosion">
-          <img src="./public/img/icon-campagne-adwords.png" alt="icon-eclosion">
-          <img src="./public/img/icon-analyse-flux-web.png" alt="icon-eclosion">
-        </div>
+          <h3>Outils</h3>
+          <div class="icones">
+              <img src="./public/img/icon-eclosion.png" alt="icon-eclosion">
+              <img src="./public/img/icon-evolution.png" alt="icon-evolution">
+              <img src="./public/img/icon-envole.png" alt="icon-envole">
+          </div>
       </div>
       <div class="contenu">
-        <h3>Packs</h3>
-        <div class="icones">
-          <img src="./public/img/icon-campagne-facebook.png" alt="icon-eclosion">
-          <img src="./public/img/google-plus.png" alt="icon-eclosion">
-
-        </div>
+          <h3>Social media</h3>
+          <div class="icones">
+              <img src="./public/img/google-plus.png" alt="google-plus">
+              <img src="./public/img/google-plus.png" alt="google-plus">
+          </div>
       </div>
-      <span>C.G.V</span>
-    </footer>
-  
+  </footer>
 </body>
 </html>
